# ExjobbAntonBoris

./: README.md
app/: CMakeLists.txt  prj.conf  prj_test.conf
app/includes/: client.c  server.c  server.h
app/includes/bmi_160/: bmi_160.c  bmi_160.h  register.h
app/includes/server/: server.c  server.h
app/src/: client.sh  main.c  make.sh  server.sh  simple.pb.h  simple.proto
app/tests/: CMakeLists.txt
app/tests/bmi160_test/src/: test_bmi160.c
client/src/: CMakeLists.txt  client.c  client.h  client.sh
